Fix divs size. Grid is not overflowing the page anymore

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,11 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 .container {
+  width: 100vw;
+  height: 100vh;
   display: flex;
 }
